--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
+
 {
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs18.x"
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
     }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 }
